feat(map): add GetComments handler
